# rtget

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
src/: args.rs  concurrency.rs  daemonize.rs  error.rs  filesystem.rs  main.rs  progress.rs  url_validator.rs
src/downloader/: ftp.rs  http.rs  mod.rs
