[package]
name = "rtget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
indicatif = "0.17.11"
reqwest = { version = "0.12.9", features = ["blocking", "stream"] }
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros"] }
url = "2.5.3"
futures-util = "0.3.30"
log = "0.4.27"
env_logger = "0.11.8"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7.0"

[target.'cfg(unix)'.dependencies]
daemonize = "0.5.0"

[dev-dependencies]
tokio = { version = "1.41.0", features = ["time"] }
